src/index.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

* {
  margin: 0;
  padding: 0;
}

:root {
  background-color: #DFDCD8;
  font-family: kanit;
}

/* Format for all pages -------------------------------------------------------------*/

.container {
  display: flex;
  max-width: 70rem;
  padding: 0 5rem;
}

/* Nav Bar --------------------------------------------------------------------------*/

.NavBar {
  margin: 0 177px;
  padding: 20px 50px;
}

ul {
  list-style: none;
  color: rgb(0, 0, 0);
  display: flex;
  flex-wrap: wrap;
}

ul li {
  padding: 20px 30px 10px;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  transition: .3s;
}
ul li:hover {
  color: #fff;
  transition: .6s;
}
ul li:before {
  content: "";
  position: absolute;
  inset: calc(100% - 3px) 0 0 0;
  background: #949978; /* the color */
  bottom: 0;
  scale: 0 1;
  transition: .3s, translate 0s .3s;
}
ul:hover li:before {
  scale: 1;
}
ul li:hover:before {
  translate: 0;
  transition: .3s;
}
ul:hover li:has(~ li:hover):before {
  translate: 100% 0;
  transition: .2s .2s,scale 0s .4s;
}
ul:hover li:hover ~ li:before {
  translate: -100% 0;
  transition: .2s .2s,scale 0s .4s;
}

/* Home Page --------------------------------------------------------------------------*/

/* Background */

.rockContainer {
  padding: 0 15rem;
}

.rock1 {
  object-position: center;
  width: 695px;
  height: 570px;
  z-index: -1;
  position: absolute;
  margin-top: 500px;
}

.rock2{
  object-position: center;
  width: 365px;
  height: 322px;
  z-index: 0;
  position: absolute;
  margin: 300px 60px;
}

.rock3 {
  object-position: center; 
  width: 240px;
  height: 195px;
  z-index: 0;
  position: absolute;
  margin: 890px 500px;
}

/* Home Info */
.homeContainer {


}

